src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Group Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Enablement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Participant_Hours__c</fullName>
        <label>Total Participant Hours</label>
        <summarizedField>Project_Event__c.Participant_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Project_Event__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Event__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Prep_Hours__c</fullName>
        <label>Total Prep Hours</label>
        <summarizedField>Project_Event__c.Preparation_Hours__c</summarizedField>
        <summaryForeignKey>Project_Event__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>